padding to card

--- a/actionCard.html
+++ b/actionCard.html
@@ -3,14 +3,23 @@
   <head>
     <title>actionCard</title>
     <style>
+      * {
+        margin: 0px;
+        padding: 0px;
+      }
+
       .card {
         width: 400px;
         height: 300px;
-        border: 1px solid rgba(0, 0, 0, 0.6);
+        border: 1px solid rgba(0, 0, 0, 0.3);
+        box-sizing: border-box;
+        padding: 30px;
       }
     </style>
   </head>
   <body>
-    <article class="card"></article>
+    <article class="card">
+      <h1 style="background-color: orange"></h1>
+    </article>
   </body>
 </html>
