heading is addedt

--- a/actionCard.html
+++ b/actionCard.html
@@ -6,20 +6,30 @@
       * {
         margin: 0px;
         padding: 0px;
+        font-family: sans-serif;
+        box-sizing: border-box;
       }
 
       .card {
         width: 400px;
         height: 300px;
         border: 1px solid rgba(0, 0, 0, 0.3);
-        box-sizing: border-box;
+
         padding: 30px;
+      }
+
+      #card-heading {
+        color: rgba(0, 0, 0, 0.6);
+        font-size: 32px;
+        font-weight: 300;
+        padding-bottom: 14px;
+        border-bottom: 3px solid black;
       }
     </style>
   </head>
   <body>
     <article class="card">
-      <h1 style="background-color: orange"></h1>
+      <h1 id="card-heading">Bulid your first charbot in 10 minutes!</h1>
     </article>
   </body>
 </html>
