--- a/actionCard.html
+++ b/actionCard.html
@@ -7,29 +7,50 @@
         margin: 0px;
         padding: 0px;
         font-family: sans-serif;
-        box-sizing: border-box;
       }
 
       .card {
         width: 400px;
         height: 300px;
         border: 1px solid rgba(0, 0, 0, 0.3);
-
+        box-sizing: border-box;
         padding: 30px;
       }
 
-      #card-heading {
+      .card > h1 {
         color: rgba(0, 0, 0, 0.6);
         font-size: 32px;
-        font-weight: 300;
         padding-bottom: 14px;
         border-bottom: 3px solid black;
+        font-weight: 300;
+      }
+
+      .card > blockquote {
+        color: rgba(0, 0, 0, 0.5);
+        margin-top: 16px;
+        font-weight: 300;
+        font-size: 16px;
+      }
+
+      .card button {
+        background-color: rgba(30, 143, 255, 0.782);
+        margin: 16px 0px;
+        width: 100%;
+        height: 40px;
+        border: 1px solid white;
+        color: white;
+        border-radius: 100px;
       }
     </style>
   </head>
   <body>
     <article class="card">
-      <h1 id="card-heading">Bulid your first charbot in 10 minutes!</h1>
+      <h1>Bulid your first charbot in 10 minutes!</h1>
+      <blockquote class="card-quote">
+        Have a bot answering questions from customers on your website within 10
+        minutes of signing up for ChatBot.
+      </blockquote>
+      <button>TRY NOW →</button>
     </article>
   </body>
 </html>
