--- a/actionCard.html
+++ b/actionCard.html
@@ -33,7 +33,7 @@
       }
 
       .card > button {
-        background-color: rgba(30, 143, 255, 0.782);
+        background-color: rgb(38, 134, 230);
         margin: 16px 0px;
         width: 100%;
         height: 40px;
