updated (heading semantics changed)

--- a/actionCard.html
+++ b/actionCard.html
@@ -26,7 +26,7 @@
         padding-bottom: 14px;
       }
 
-      .card > blockquote {
+      #card-desc {
         color: rgba(0, 0, 0, 0.5);
         margin-top: 16px;
         font-size: 16px;
@@ -60,10 +60,10 @@
     <article class="card">
       <h1>Bulid your first charbot in 10 minutes!</h1>
       <div id="seprator"></div>
-      <blockquote class="card-quote">
+      <p id="card-desc">
         Have a bot answering questions from customers on your website within 10
         minutes of signing up for ChatBot.
-      </blockquote>
+      </p>
       <button>TRY NOW →</button>
       <p>
         By clicking try now you create an accont and agree to our Terms and
