--- a/actionCard.html
+++ b/actionCard.html
@@ -26,12 +26,6 @@
         padding-bottom: 14px;
       }
 
-      #card-desc {
-        color: rgba(0, 0, 0, 0.5);
-        margin-top: 16px;
-        font-size: 16px;
-      }
-
       .card > button {
         background-color: rgb(38, 134, 230);
         margin: 16px 0px;
@@ -48,19 +42,25 @@
         color: rgba(0, 0, 0, 0.4);
       }
 
-      #seprator {
+      .seprator {
         height: 2px;
         width: 40px;
         background-color: black;
         border-radius: 20px;
+      }
+
+      .card .card-desc {
+        color: rgba(0, 0, 0, 0.5);
+        margin-top: 16px;
+        font-size: 16px;
       }
     </style>
   </head>
   <body>
     <article class="card">
       <h1>Bulid your first charbot in 10 minutes!</h1>
-      <div id="seprator"></div>
-      <p id="card-desc">
+      <div class="seprator"></div>
+      <p class="card-desc">
         Have a bot answering questions from customers on your website within 10
         minutes of signing up for ChatBot.
       </p>
